Добавленна секция blog

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "@fancyapps/ui": "^6.0.5",
     "jquery": "^3.7.1",
     "sass": "^1.89.2"
   }
